Another stab at fixing publishing for collapsed fieldsets
Make sure we've loaded moment.js before attempting to use it.

Also a small update to styles to accommodate 7.4

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -319,6 +319,9 @@
             }
         }
         .settingsHeader {
+            label {
+                display: inline-block;
+            }
             &:hover {
                 cursor: pointer;
                 label {
